--- a/Group1Desk/MainWindow.xaml
+++ b/Group1Desk/MainWindow.xaml
@@ -1,12 +1,10 @@
-﻿<Window x:Class="Group1Desk.MainWindow"
+﻿<NavigationWindow x:Class="Group1Desk.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Group1Desk"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
-    </Grid>
-</Window>
+        Title="Group1Desk" Height="480" Width="600" Source="Group1DeskHome.xaml">
+    
+</NavigationWindow>
