Desk Price Page interface complete.

--- a/Group1Desk/DeskPricePage.xaml
+++ b/Group1Desk/DeskPricePage.xaml
@@ -9,104 +9,93 @@
       Title="Group1Desk - Display Prices">
 
 
+    <Grid>
+        <FlowDocumentReader>
+            <FlowDocument>
+                <Table CellSpacing="6">
+                    <Table.Columns>
+                        <TableColumn/>
+                        <TableColumn/>
+                    </Table.Columns>
+                    <TableRowGroup>
+                        <!-- Title row for the table. -->
+                        <TableRow Background="SkyBlue">
+                            <TableCell ColumnSpan="2" TextAlignment="Center">
+                                <Paragraph FontSize="20pt" FontWeight="Bold">Custom Desk Price Quote</Paragraph>
+                            </TableCell>
+                        </TableRow>
+                        <!-- Blank row -->
+                        <TableRow>
+                            <TableCell>
 
-    <FlowDocumentReader>
-        <FlowDocument>
+                            </TableCell>
+                        </TableRow>
+                        <!-- Rows for sub-prices. -->
+                        <TableRow>
+                            <TableCell>
+                                <Paragraph FontSize="14pt" FontWeight="Bold">Base Desk Price</Paragraph>
+                            </TableCell>
+                            <TableCell>
+                                <Paragraph>"{Binding Xpath=@BasePrice}"</Paragraph>
+                            </TableCell>
+                        </TableRow>
+                        <TableRow Background="lightgray">
+                            <TableCell>
+                                <Paragraph FontSize="14pt" FontWeight="Bold">Extra Drawers Price</Paragraph>
+                            </TableCell>
+                            <TableCell>
+                                <Paragraph>"{Binding Xpath=@getDrawersPrice()}"</Paragraph>
+                            </TableCell>
+                        </TableRow>
+                        <TableRow>
+                            <TableCell>
+                                <Paragraph FontSize="14pt" FontWeight="Bold">Surface Material Price</Paragraph>
+                            </TableCell>
+                            <TableCell>
+                                <Paragraph>"{Binding Xpath=@getSurfaceMaterialPrice()}"</Paragraph>
+                            </TableCell>
+                        </TableRow>
+                        <TableRow Background="lightgray">
+                            <TableCell>
+                                <Paragraph FontSize="14pt" FontWeight="Bold">Desk Size Price</Paragraph>
+                            </TableCell>
+                            <TableCell>
+                                <Paragraph>"{Binding Xpath=@getSurfaceAreaPrice()}"</Paragraph>
+                            </TableCell>
+                        </TableRow>
+                        <TableRow >
+                            <TableCell>
+                                <Paragraph FontSize="14pt" FontWeight="Bold">Rush Delivery Fee</Paragraph>
+                            </TableCell>
+                            <TableCell>
+                                <Paragraph>"{Binding Xpath=@getSpeedPrice()}"</Paragraph>
+                            </TableCell>
+                        </TableRow>
+                        <TableRow >
+                            <TableCell>
+                            </TableCell>
+                            <TableCell>
+                                <Paragraph>--------------------</Paragraph>
+                            </TableCell>
+                        </TableRow>
+                        <TableRow Background="SkyBlue">
+                            <TableCell >
+                                <Paragraph FontSize="14pt" FontWeight="Bold">Total Desk Price</Paragraph>
+                            </TableCell>
+                            <TableCell>
+                                <Paragraph>"{Binding Xpath=@getTotalPrice()}"</Paragraph>
+                            </TableCell>
+                        </TableRow>
+                    </TableRowGroup>
+                </Table>
+            </FlowDocument>
+        </FlowDocumentReader>
+        
+        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="268,374,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="193"/>
+        <Label x:Name="label" Content="Please enter filename to save order:" FontSize="14px" HorizontalAlignment="Left" Margin="22,368,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="button" Content="Save Order" FontSize="14px" FontWeight="Bold" HorizontalAlignment="Left" Margin="478,374,0,0" VerticalAlignment="Top" Width="100"/>
 
-            <Table CellSpacing="6">
 
-                <Table.Columns>
-                    <TableColumn/>
-                    <TableColumn/>
-                </Table.Columns>
+    </Grid>
 
-                <TableRowGroup>
-
-                    <!-- Title row for the table. -->
-                    <TableRow Background="SkyBlue">
-                        <TableCell ColumnSpan="2" TextAlignment="Center">
-                            <Paragraph FontSize="24pt" FontWeight="Bold">Custom Desk Price Quote</Paragraph>
-                        </TableCell>
-                    </TableRow>
-
-                    <!-- Blank row -->
-                    <TableRow>
-                        <TableCell>
-
-                        </TableCell>
-                    </TableRow>
-
-                    <!-- Rows for sub-prices. -->
-                    <TableRow>
-                        <TableCell>
-                            <Paragraph FontSize="14pt" FontWeight="Bold">Base Desk Price</Paragraph>
-                        </TableCell>
-                        <TableCell>
-                            <Paragraph>{Binding Source={StaticResource yourOrder}, Path=BasePrice}</Paragraph>
-                        </TableCell>
-                     
-                    
-                    </TableRow>
-                    <TableRow Background="lightgray">
-                        <TableCell>
-                            <Paragraph FontSize="14pt" FontWeight="Bold">Extra Drawers Price</Paragraph>
-                        </TableCell>
-                        <TableCell>
-                            <Paragraph>yourOrder.getDrawersPrice()</Paragraph>
-                        </TableCell>
-                
-                    </TableRow>
-                    <TableRow>
-                        <TableCell>
-                            <Paragraph FontSize="14pt" FontWeight="Bold">Surface Material Price</Paragraph>
-                        </TableCell>
-                        <TableCell>
-                            <Paragraph>yourOrder.getSurfaceMaterialPrice()</Paragraph>
-                        </TableCell>
-                
-                     
-                    </TableRow>
-                    <TableRow Background="lightgray">
-                        <TableCell>
-                            <Paragraph FontSize="14pt" FontWeight="Bold">Desk Size Price</Paragraph>
-                        </TableCell>
-                        <TableCell>
-                            <Paragraph>yourOrder.getSurfaceAreaPrice()</Paragraph>
-                        </TableCell>
-                
-                    </TableRow>
-
-                    <TableRow >
-                        <TableCell>
-                            <Paragraph FontSize="14pt" FontWeight="Bold">Rush Delivery Fee</Paragraph>
-                        </TableCell>
-                        <TableCell>
-                            <Paragraph>yourOrder.getSpeedPrice()</Paragraph>
-                        </TableCell>
-                    </TableRow>
-
-                    <TableRow >
-                        <TableCell >
-                         
-                        </TableCell>
-                        <TableCell>
-                            <Paragraph>--------------------</Paragraph>
-                        </TableCell>
-                    </TableRow>
-                    
-                    <TableRow Background="SkyBlue">
-                        <TableCell >
-                            <Paragraph FontSize="14pt" FontWeight="Bold">Total Desk Price</Paragraph>
-                        </TableCell>
-                        <TableCell>
-                            <Paragraph>yourOrder.getTotalPrice()</Paragraph>
-                        </TableCell>
-                    </TableRow>
-
-                </TableRowGroup>
-            </Table>
-        </FlowDocument>
-    </FlowDocumentReader>
-    
-    
 </Page>
