--- a/Group1Desk/Group1DeskHome.xaml
+++ b/Group1Desk/Group1DeskHome.xaml
@@ -4,11 +4,27 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Group1Desk"
-      mc:Ignorable="d" 
-      d:DesignHeight="480" d:DesignWidth="600"
-      Title="Group1Desk - Home">
+      mc:Ignorable="d" d:DesignWidth="500"
+      Title="Group1Desk - Home" Height="500
+      ">
 
-    <Grid>
-        
+    <Grid Margin="0,0,0,51">
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Center"  Margin="156,50,66,367" TextWrapping="Wrap" VerticalAlignment="Center" Padding="3" FontSize="20" Foreground="Black"  Text="Customize Your Desk:" Width="278"/>
+        <Button x:Name="button" Content="Get Quote"  Margin="181,334,189,73" VerticalAlignment="Center" Height="42" Click="button_Click" Background="#FF5BB12E" Foreground="White" FontWeight="Bold" FontSize="18" Padding="5"/>
+   
+
+        <Label x:Name="length" Content="Length:" HorizontalAlignment="Left" Margin="61,108,0,0" VerticalAlignment="Top" Width="155" FontSize="18"/>
+        <ComboBox HorizontalAlignment="Center" Margin="301,119,48,0" VerticalAlignment="Top" Width="151" Loaded="comboBox_Length" SelectionChanged="ComboBox_LengthChanged"/>
+
+        <Label x:Name="width" Content="Width:" HorizontalAlignment="Left" Margin="61,157,0,0" VerticalAlignment="Top" Width="155" FontSize="18"/>
+        <ComboBox HorizontalAlignment="Center" Margin="301,168,48,0" VerticalAlignment="Top" Width="151" Loaded="comboBox_Width" SelectionChanged="ComboBox_WidthChanged"/>
+
+        <Label x:Name="material" Content="Material:" HorizontalAlignment="Left" Margin="61,209,0,0" VerticalAlignment="Top" Width="155" FontSize="18"/>
+        <ComboBox HorizontalAlignment="Center" Margin="301,220,48,0" VerticalAlignment="Top" Width="151" Loaded="comboBox_Material" SelectionChanged="ComboBox_MaterialChanged"/>
+
+        <Label x:Name="shipping" Content="Rush Shipping:" HorizontalAlignment="Left" Margin="61,266,0,0" VerticalAlignment="Top" Width="155" FontSize="18"/>
+        <ComboBox HorizontalAlignment="Center" Margin="301,276,48,0" VerticalAlignment="Top" Width="151" Loaded="comboBox_Shipping" SelectionChanged="ComboBox_ShippingChanged"/>
+
+        <TextBlock x:Name="textBlock_Copy" HorizontalAlignment="Center"  Margin="67,10,-40,406" TextWrapping="Wrap" VerticalAlignment="Center" Padding="3" FontSize="20" FontWeight="Bold" Foreground="Black"  Text="Welcome to the Desk Ordering System:" Width="473"/>
     </Grid>
 </Page>
