--- a/Group1Desk/DeskPricePage.xaml
+++ b/Group1Desk/DeskPricePage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Group1Desk.DeskPricePage"
+<Page x:Class="Group1Desk.DeskPricePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -9,20 +9,60 @@
       Title="Group1Desk - Display Prices">
 
     <Grid>
-        <Label x:Name="BasePrice" Content="Label" HorizontalAlignment="Center"></Label>
-        <Label x:Name="getDrawersPrice" Content="Label" ></Label>
-        <Label x:Name="getSurfaceArea" Content="Label" ></Label>
-        <Label x:Name="getSurfaceAreaPrice" Content="Label" ></Label>
-        <Label x:Name="getSurfaceTypePrice" Content="Label" ></Label>
-        <Label x:Name="getSpeedPrice" Content="Label" ></Label>
-        <Label x:Name="getTotalPrice" Content="Label" ></Label>
-     
-        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="253,347,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="124"/>
-        <Label x:Name="label" Content="Please enter filename to save order:" FontSize="14px" HorizontalAlignment="Left" Margin="18,341,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="button" Content="Save Order" FontSize="14px" FontWeight="Bold" HorizontalAlignment="Left" Margin="390,347,0,0" VerticalAlignment="Top" 
-                Width="100" Click="button_Click"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="80"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="60"/>
+            <RowDefinition Height="60"/>
+        </Grid.RowDefinitions>
 
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
 
+        <!-- Row 0, Title-->
+        <Label Content="Custom Desk Price Quote" Grid.ColumnSpan="2" Grid.Row="0" FontSize="20pt" FontWeight="Bold" Background="#FF5BB12E" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+
+        <!-- Row 1, Heading -->
+        <Label Content="Category" Grid.Column="0" Grid.Row="1" FontSize="12pt" FontWeight="Bold" Background="Black" Foreground="White" VerticalContentAlignment="Center"/>
+        <Label Content="Cost" Grid.Column="1" Grid.Row="1" FontSize="12pt" FontWeight="Bold" Background="Black" Foreground="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Right"/>
+
+        <!-- Row 2, Base Price -->
+        <Label Content="Base Desk Price" Grid.Column="0" Grid.Row="2" FontSize="12pt" FontWeight="Bold" Background="White" />
+        <Label x:Name="BasePrice" Content="Label" Grid.Column="1" Grid.Row="2" FontSize="12pt" Background="White" HorizontalContentAlignment="Right" />
+
+        <!-- Row 3,  Surface Area -->
+        <Label Content="Surface Area" Grid.Column="0" Grid.Row="3" FontSize="12pt" FontWeight="Bold" Background="LightGray" />
+        <Label x:Name="getSurfaceAreaPrice" Content="Label" Grid.Column="1" Grid.Row="3" FontSize="12pt" Background="LightGray" HorizontalContentAlignment="Right" />
+
+        <!-- Row 4, Surface Type -->
+        <Label Content="Surface" Grid.Column="0" Grid.Row="4" FontSize="12pt" FontWeight="Bold" Background="White" />
+        <Label x:Name="getSurfaceTypePrice" Content="Label" Grid.Column="1" Grid.Row="4" FontSize="12pt" Background="White" HorizontalContentAlignment="Right" />
+
+        <!-- Row 5, Drawers -->
+        <Label Content="Drawers" Grid.Column="0" Grid.Row="5" FontSize="12pt" FontWeight="Bold" Background="LightGray" />
+        <Label x:Name="getDrawersPrice" Content="Label" Grid.Column="1" Grid.Row="5" FontSize="12pt" Background="LightGray" HorizontalContentAlignment="Right" />
+
+        <!-- Row 6, Shipping -->
+        <Label Content="Shipping Speed" Grid.Column="0" Grid.Row="6" FontSize="12pt" FontWeight="Bold" Background="White" />
+        <Label x:Name="getSpeedPrice" Content="Label" Grid.Column="1" Grid.Row="6" FontSize="12pt" Background="White" HorizontalContentAlignment="Right"/>
+
+        <!-- Row 7, Total -->
+        <Label Content="Total Cost" Grid.Column="0" Grid.Row="7" FontSize="12pt" FontWeight="Bold" Background="LightGray" />
+        <Label x:Name="getTotalPrice" Content="Label" Grid.Column="1" Grid.Row="7" FontSize="12pt" Background="LightGray" HorizontalContentAlignment="Right"/>
+
+        <!-- Row 8, Export -->
+        <Label x:Name="label" Content="Enter filename to save order" Grid.Column="0" Grid.Row="8" FontSize="12pt" FontWeight="Bold" Background="White" VerticalContentAlignment="Center"/>
+        <TextBox x:Name="textBox" Grid.Column="1" Grid.Row="8" Height="50" Width="300" FontSize="12px" HorizontalAlignment="Left" VerticalContentAlignment="Center" Margin="5,5,5,5" />
+
+        <!-- Row 9, Button -->
+        <Button x:Name="button" Content="Save Order" Grid.Column="1" Grid.Row="9" Click="button_Click" FontSize="14pt" FontWeight="Bold" Background="#FF5BB12E" Margin="5,5,5,5"/>
     </Grid>
-
 </Page>
