--- a/Group1Desk/DeskPricePage.xaml
+++ b/Group1Desk/DeskPricePage.xaml
@@ -1,4 +1,4 @@
-<Page x:Class="Group1Desk.DeskPricePage"
+﻿<Page x:Class="Group1Desk.DeskPricePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -18,7 +18,6 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="60"/>
             <RowDefinition Height="60"/>
         </Grid.RowDefinitions>
 
@@ -60,9 +59,6 @@
 
         <!-- Row 8, Export -->
         <Label x:Name="label" Content="Enter filename to save order" Grid.Column="0" Grid.Row="8" FontSize="12pt" FontWeight="Bold" Background="White" VerticalContentAlignment="Center"/>
-        <TextBox x:Name="textBox" Grid.Column="1" Grid.Row="8" Height="50" Width="300" FontSize="12px" HorizontalAlignment="Left" VerticalContentAlignment="Center" Margin="5,5,5,5" />
-
-        <!-- Row 9, Button -->
-        <Button x:Name="button" Content="Save Order" Grid.Column="1" Grid.Row="9" Click="button_Click" FontSize="14pt" FontWeight="Bold" Background="#FF5BB12E" Margin="5,5,5,5"/>
+        <Button x:Name="button" Content="Save Order" Grid.Column="1" Grid.Row="8" Click="button_Click" FontSize="14pt" FontWeight="Bold" Background="#FF5BB12E" Margin="5,5,5,5"/>
     </Grid>
 </Page>
