--- a/Group1Desk/DeskPricePage.xaml
+++ b/Group1Desk/DeskPricePage.xaml
@@ -1,4 +1,4 @@
-<Page x:Class="Group1Desk.DeskPricePage"
+﻿<Page x:Class="Group1Desk.DeskPricePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
